--- a/optibench.1
+++ b/optibench.1
@@ -35,8 +35,21 @@ cases, specifying a larger file system may produce more realistic results.
 .SH "PURPOSE"
 
 .B OptiBench
-is a simple program for reporting the best performance possible on given
-hardware using an optimal program.
+is a simple program for reporting the maximum sustainable memory and disk
+throughput one could expect from an optimal program.  It does not attempt
+to report hardware transfer rate (which is not generally useful) or estimate
+performance of real programs.
+
+The goal is to provide a theoretical maximum to which real programs can be
+compared.  For example, if optibench reports 10 seconds to sequentially read
+the generated file, then we know that 10 seconds is the theoretical best
+time that any program can achieve while streaming this file.  If
+.B fgrep string bench.tmpfile
+takes 15 seconds, then it is achieving about 2/3 of the maximum theoretical
+disk throughput.  We might then investigate whether fgrep's CPU bottleneck
+can be reduced to the point where it can keep up with the disk input.  Once
+fgrep is running clone to 10 seconds for this file, we know that it cannot
+be sped up much further.
 
 .SH "DESCRIPTION"
 
